# ssg

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Tupfile.win32.lua  build_linux.sh  build_windows.bat  build_windows_tup.bat
GIAN07/: CONFIG.CPP  CONFIG.H  DEMOPLAY.CPP  DEMOPLAY.H  ENTRY.CPP  GAMEMAIN.CPP  GAMEMAIN.H  REPLAY.CPP  REPLAY.H  REPLAYUI.CPP  REPLAYUI.H  SCROLL.CPP  WindowCtrl.cpp
cmake/: Dependencies.cmake  DependenciesWindows.cmake  Version.cmake  platform_constants.h.in  version.h.in
configurator/: App.axaml  App.axaml.cs  GIAN07.Configurator.csproj  KeyCaptureDialog.axaml  KeyCaptureDialog.axaml.cs  KeyboardMapping.cs  MainWindow.axaml  MainWindow.axaml.cs  PadCaptureDialog.axaml  PadCaptureDialog.axaml.cs  PadMapping.cs  Program.cs  README.md
configurator/Properties/PublishProfiles/: WindowsSingleFile.pubxml
configurator/Services/: ConfiguratorSettingsStore.cs  ControllerService.cs  GameConfigFile.cs  InputDeviceService.cs
game/: input.h  ut_math.cpp  ut_math.h
launcher/: App.axaml  App.axaml.cs  GIAN07.Launcher.csproj  KeyCaptureDialog.axaml  KeyCaptureDialog.axaml.cs  KeyboardMapping.cs  MainWindow.axaml  MainWindow.axaml.cs  PadCaptureDialog.axaml  PadCaptureDialog.axaml.cs  PadMapping.cs  Program.cs  README.md  launcher.rc  main.cpp  resource.h
launcher/Properties/PublishProfiles/: WindowsSingleFile.pubxml
launcher/Services/: ControllerService.cs  GameConfigFile.cs  InputDeviceService.cs  LauncherSettingsStore.cs
platform/sdl/: graphics_sdl.cpp  input_sdl.cpp  window_sdl.cpp
